k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextjs-prisma
  labels:
    name: nextjs-prisma
