k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  namespace: nextjs-prisma
  labels:
    app: nextjs-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: nextjs-app
